--- a/modules/billing/locale/fr_FR.po
+++ b/modules/billing/locale/fr_FR.po
@@ -7,6 +7,11 @@ msgid "Last line of payment term \"%s\" must be of type remainder."
 msgstr ""
 
 msgctxt "error:billing.billing_manager:"
+msgid ""
+"A payment bank account must be provided if the payment mode is Direct Debit"
+msgstr ""
+
+msgctxt "error:billing.billing_manager:"
 msgid "This item (%s) is used by %s (%s, %s)"
 msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
 
@@ -97,6 +102,10 @@ msgstr "Montant total"
 msgctxt "field:account.move,wo_fee_amount:"
 msgid "Amount w/o fees"
 msgstr "Montant hors Frais"
+
+msgctxt "field:account.move,wo_tax_amount:"
+msgid ""
+msgstr ""
 
 msgctxt "field:account.move.line,origin_name:"
 msgid "Origin Name"
@@ -688,7 +697,7 @@ msgstr "Nom"
 
 msgctxt "field:billing.price_line-fee-relation,to_recalculate:"
 msgid "Recalculate at billing"
-msgstr ""
+msgstr "Recalculer à la facturation"
 
 msgctxt "field:billing.price_line-fee-relation,write_date:"
 msgid "Write Date"
@@ -736,7 +745,7 @@ msgstr "Taxe"
 
 msgctxt "field:billing.price_line-tax-relation,to_recalculate:"
 msgid "Recalculate at billing"
-msgstr ""
+msgstr "Recalculer à la facturation"
 
 msgctxt "field:billing.price_line-tax-relation,write_date:"
 msgid "Write Date"
@@ -770,6 +779,10 @@ msgctxt "field:billing.product-payment_method-relation,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
+msgctxt "field:billing.product-payment_method-relation,order:"
+msgid "Order"
+msgstr "Ordre"
+
 msgctxt "field:billing.product-payment_method-relation,payment_method:"
 msgid "Payment Method"
 msgstr "Méthode de Paiement"
@@ -790,6 +803,10 @@ msgctxt "field:billing.product-payment_method-relation,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:company.company,fiscal_years:"
+msgid "Fiscal Years"
+msgstr "Années fiscales"
+
 msgctxt "field:contract.contract,billing_managers:"
 msgid "Billing Managers"
 msgstr "Gestionnaires d'Appel de Cotisation"
@@ -797,6 +814,10 @@ msgstr "Gestionnaires d'Appel de Cotisation"
 msgctxt "field:contract.contract,billing_periods:"
 msgid "Billing Periods"
 msgstr "Période de Facturation"
+
+msgctxt "field:contract.contract,display_all_lines:"
+msgid ""
+msgstr ""
 
 msgctxt "field:contract.contract,last_bill:"
 msgid "Last Bill"
@@ -831,12 +852,16 @@ msgid "Account for billing"
 msgstr "Compte de Facturation"
 
 msgctxt "field:ins_contract.covered_element,indemnification_bank_account:"
-msgid ""
+msgid "Indemnification Bank Account"
 msgstr "Compte de Remboursement"
 
 msgctxt "field:ins_contract.covered_element,indemnification_bank_account:"
 msgid "Indemnification Bank Account"
 msgstr "Compte de Remboursement"
+
+msgctxt "field:ins_contract.covered_element,subscriber:"
+msgid ""
+msgstr ""
 
 msgctxt "field:offered.coverage,account_for_billing:"
 msgid "Account for billing"
@@ -845,6 +870,10 @@ msgstr "Compte de Facturation"
 msgctxt "field:offered.product,account_for_billing:"
 msgid "Account for billing"
 msgstr "Compte de Facturation"
+
+msgctxt "field:offered.product,payment_delay:"
+msgid "Payment delay"
+msgstr ""
 
 msgctxt "field:offered.product,payment_methods:"
 msgid "Payment Methods"
@@ -1000,7 +1029,7 @@ msgstr "Terme échu"
 
 msgctxt "selection:billing.payment_rule,remaining_position:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:billing.payment_rule,remaining_position:"
 msgid "Custom Lines"
@@ -1016,7 +1045,7 @@ msgstr "Dernière ligne calculée"
 
 msgctxt "selection:billing.payment_rule_line,month:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:billing.payment_rule_line,month:"
 msgid "April"
@@ -1080,7 +1109,7 @@ msgstr "Au prorata"
 
 msgctxt "selection:billing.payment_rule_line,weekday:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:billing.payment_rule_line,weekday:"
 msgid "Friday"
@@ -1112,7 +1141,7 @@ msgstr "Mercredi"
 
 msgctxt "selection:billing.price_line,frequency:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:billing.price_line,frequency:"
 msgid "Half Yearly"
@@ -1130,8 +1159,28 @@ msgctxt "selection:billing.price_line,frequency:"
 msgid "Yearly"
 msgstr "Annuel"
 
+msgctxt "selection:offered.product,payment_delay:"
+msgid "In Advance"
+msgstr "Terme à échoir"
+
+msgctxt "selection:offered.product,payment_delay:"
+msgid "In Arrears"
+msgstr "Terme échu"
+
+msgctxt "view:account.move.line:"
+msgid "Lines"
+msgstr "Lignes"
+
 msgctxt "view:account.move.line:"
 msgid "Move Lines"
+msgstr ""
+
+msgctxt "view:account.move.line:"
+msgid "Scheduling"
+msgstr ""
+
+msgctxt "view:account.move.line:"
+msgid "Total Amount"
 msgstr ""
 
 msgctxt "view:account.move.line:"
@@ -1141,6 +1190,14 @@ msgstr ""
 msgctxt "view:account.move.line:"
 msgid "debit"
 msgstr ""
+
+msgctxt "view:account.move:"
+msgid "Move"
+msgstr "Mouvement"
+
+msgctxt "view:account.move:"
+msgid "Moves"
+msgstr "Mouvements"
 
 msgctxt "view:billing.billing_manager:"
 msgid "Billing Managers"
@@ -1166,6 +1223,22 @@ msgctxt "view:billing.payment_method:"
 msgid "Payment Methods"
 msgstr "Méthode de Paiement"
 
+msgctxt "view:billing.payment_rule:"
+msgid "Payment Rules"
+msgstr ""
+
+msgctxt "view:billing.payment_rule:"
+msgid "payment_rule"
+msgstr ""
+
+msgctxt "view:billing.payment_rule_line:"
+msgid "Payment Rule Line"
+msgstr "Ligne de règle de paiement"
+
+msgctxt "view:billing.payment_rule_line:"
+msgid "Payment Rule Lines"
+msgstr ""
+
 msgctxt "view:billing.period:"
 msgid "Billing Period"
 msgstr "Période de Facturation"
@@ -1189,6 +1262,10 @@ msgstr "Ligne de taxe"
 msgctxt "view:billing.price_line-tax-relation:"
 msgid "Tax Lines"
 msgstr "Lignes de taxe"
+
+msgctxt "view:billing.price_line:"
+msgid "Amount w/o taxes"
+msgstr ""
 
 msgctxt "view:billing.price_line:"
 msgid "Price Line"
