--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -440,19 +440,19 @@ msgstr "Emprunteur"
 
 msgctxt "field:party.broker,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -460,27 +460,27 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:party.broker,party:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,reference:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.broker,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.party,broker_role:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:party.party,dist_networks:"
 msgid "Distribution Networks"
@@ -488,7 +488,7 @@ msgstr "Réseaux de Distribution"
 
 msgctxt "field:party.party,is_broker:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:commission.commission_amount_to_display,name:"
 msgid "Commission Amount To Display"
@@ -560,7 +560,7 @@ msgstr "Plans de Commissionnement"
 
 msgctxt "model:party.broker,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:commission.commission_rule,config_kind:"
 msgid "Advanced"
@@ -584,7 +584,7 @@ msgstr "Produit"
 
 msgctxt "selection:commission.commission_rule,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:commission.commission_rule,template_behaviour:"
 msgid "Add"
@@ -617,6 +617,14 @@ msgstr ""
 msgctxt "view:commission.compensated_option:"
 msgid "Compensated Option"
 msgstr "Option Commissionnée"
+
+msgctxt "view:commission.price_line-com-relation:"
+msgid "Com Line"
+msgstr ""
+
+msgctxt "view:commission.price_line-com-relation:"
+msgid "Com Lines"
+msgstr ""
 
 msgctxt "view:contract.subscribed_option:"
 msgid "Commissions"
