--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:offered.compl_data_def-tag:"
+msgid "This item (%s) is used by %s (%s, %s)"
+msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
+
 msgctxt "error:offered.complementary_data_def:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
@@ -46,53 +50,89 @@ msgctxt "error:offered.product:"
 msgid "This item (%s) is used by %s (%s, %s)"
 msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
 
+msgctxt "field:offered.compl_data_def-tag,compl_data_def:"
+msgid "Complementary Data Def"
+msgstr ""
+
+msgctxt "field:offered.compl_data_def-tag,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:offered.compl_data_def-tag,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:offered.compl_data_def-tag,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:offered.compl_data_def-tag,is_used:"
+msgid "Is Used"
+msgstr "Est Utilisé"
+
+msgctxt "field:offered.compl_data_def-tag,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.compl_data_def-tag,tag:"
+msgid "Tag"
+msgstr ""
+
+msgctxt "field:offered.compl_data_def-tag,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:offered.compl_data_def-tag,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
 msgctxt "field:offered.complementary_data_def,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,default_value:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,default_value_boolean:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,default_value_char:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,default_value_selection:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,digits:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,end_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,is_shared:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,kind:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -100,71 +140,91 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:offered.complementary_data_def,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
+
+msgctxt "field:offered.complementary_data_def,rule:"
+msgid "Rule"
+msgstr "Règle"
+
+msgctxt "field:offered.complementary_data_def,rule_sub_datas:"
+msgid "Sub Data"
+msgstr "Sous Donnée"
 
 msgctxt "field:offered.complementary_data_def,selection:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,selection_json:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,start_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,string:"
 msgid ""
+msgstr " "
+
+msgctxt "field:offered.complementary_data_def,sub_data_config_kind:"
+msgid "Sub Data Config Kind"
 msgstr ""
 
 msgctxt "field:offered.complementary_data_def,sub_datas:"
 msgid ""
+msgstr " "
+
+msgctxt "field:offered.complementary_data_def,tags:"
+msgid "Tags"
+msgstr ""
+
+msgctxt "field:offered.complementary_data_def,tags_name:"
+msgid "Tags"
 msgstr ""
 
 msgctxt "field:offered.complementary_data_def,type_:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,with_default_value:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_def,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,child:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,master:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt ""
 "field:offered.complementary_data_recursive_relation,must_expand_tree:"
@@ -173,71 +233,71 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:offered.complementary_data_recursive_relation,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,select_value:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.complementary_data_recursive_relation,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,code:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,complementary_data:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,complementary_data_def:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,coverages_in_package:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,currency:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,currency_digits:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,description:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,end_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,is_package:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,kind:"
 msgid "Coverage Kind"
@@ -249,104 +309,104 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:offered.coverage,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,products:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,start_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,subscription_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,summary:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,template:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt ""
 "field:offered.coverage-complementary_data_def,complementary_data_def:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,coverage:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.coverage-complementary_data_def,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,code:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,complementary_data:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,currency_digits:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,description:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,end_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -354,75 +414,75 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:offered.offered,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,start_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,summary:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,template:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.offered,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,coverage:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,package:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.package-coverage,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,code:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,complementary_data:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,complementary_data_def:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,contract_generator:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,coverages:"
 msgid "Coverages"
@@ -430,35 +490,35 @@ msgstr "Garanties"
 
 msgctxt "field:offered.product,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,currency:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,currency_digits:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,description:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,end_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,kind:"
 msgid "Product Kind"
@@ -470,118 +530,126 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:offered.product,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,start_date:"
 msgid ""
-msgstr ""
+msgstr " "
+
+msgctxt "field:offered.product,subscriber_kind:"
+msgid "Subscriber Kind"
+msgstr "Type"
 
 msgctxt "field:offered.product,summary:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,template:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,complementary_data_def:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,product:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-complementary_data_def,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,coverage:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,create_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,create_uid:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,id:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,is_used:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,product:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,rec_name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,write_date:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "field:offered.product-options-coverage,write_uid:"
 msgid ""
-msgstr ""
+msgstr " "
+
+msgctxt "field:rule_engine.tag,compl_data_defs:"
+msgid "Complementary Data"
+msgstr "Données Complémentaires"
 
 msgctxt "help:offered.complementary_data_def,selection:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:ir.action,name:act_coverage_form"
 msgid "Coverages"
 msgstr "Garanties"
 
 msgctxt "model:ir.action,name:act_model_coop_schema"
-msgid "Complementary Data Complementary Datas"
+msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
 msgctxt "model:ir.action,name:act_package_form"
@@ -620,41 +688,45 @@ msgctxt "model:ir.ui.menu,name:menu_product_form"
 msgid "Products"
 msgstr "Produits"
 
+msgctxt "model:offered.compl_data_def-tag,name:"
+msgid "Relation between complementary data def and tag"
+msgstr ""
+
 msgctxt "model:offered.complementary_data_def,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.complementary_data_recursive_relation,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.coverage,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.coverage-complementary_data_def,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.offered,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.package-coverage,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.product,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.product-complementary_data_def,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "model:offered.product-options-coverage,name:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.complementary_data_def,kind:"
 msgid "Benefit"
@@ -679,6 +751,14 @@ msgstr "Produit"
 msgctxt "selection:offered.complementary_data_def,kind:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
+
+msgctxt "selection:offered.complementary_data_def,sub_data_config_kind:"
+msgid "Advanced"
+msgstr "Avancé"
+
+msgctxt "selection:offered.complementary_data_def,sub_data_config_kind:"
+msgid "Simple"
+msgstr "Simple"
 
 msgctxt "selection:offered.complementary_data_def,type_:"
 msgid "Boolean"
@@ -706,7 +786,7 @@ msgstr "Sélection"
 
 msgctxt "selection:offered.coverage,kind:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.coverage,kind:"
 msgid "Default"
@@ -726,7 +806,7 @@ msgstr "Proposé par Défaut"
 
 msgctxt "selection:offered.coverage,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.coverage,template_behaviour:"
 msgid "Add"
@@ -738,7 +818,7 @@ msgstr "Remplacer"
 
 msgctxt "selection:offered.offered,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.offered,template_behaviour:"
 msgid "Add"
@@ -750,15 +830,27 @@ msgstr "Remplacer"
 
 msgctxt "selection:offered.product,kind:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.product,kind:"
 msgid "Default"
 msgstr "Défaut"
 
+msgctxt "selection:offered.product,subscriber_kind:"
+msgid "All"
+msgstr "Tous"
+
+msgctxt "selection:offered.product,subscriber_kind:"
+msgid "Company"
+msgstr "Société"
+
+msgctxt "selection:offered.product,subscriber_kind:"
+msgid "Person"
+msgstr "Personne Physique"
+
 msgctxt "selection:offered.product,template_behaviour:"
 msgid ""
-msgstr ""
+msgstr " "
 
 msgctxt "selection:offered.product,template_behaviour:"
 msgid "Add"
@@ -775,6 +867,18 @@ msgstr "Descripteur de Données Complémentaires"
 msgctxt "view:offered.complementary_data_def:"
 msgid "Complementary Data Descriptors"
 msgstr "Descripteurs de Données Complémentaires"
+
+msgctxt "view:offered.complementary_data_def:"
+msgid "Main"
+msgstr "Principale"
+
+msgctxt "view:offered.complementary_data_def:"
+msgid "Sub Data"
+msgstr "Sous Donnée"
+
+msgctxt "view:offered.complementary_data_def:"
+msgid "Tags"
+msgstr ""
 
 msgctxt "view:offered.complementary_data_recursive_relation:"
 msgid "Relation"
@@ -819,3 +923,7 @@ msgstr "Garanties"
 msgctxt "view:offered.product:"
 msgid "Product"
 msgstr "Produit"
+
+msgctxt "view:rule_engine.tag:"
+msgid "Complementary Data"
+msgstr "Données Complémentaires"
