--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -14,6 +14,10 @@ msgctxt "error:process.process_desc:"
 msgid "The technical name must be unique"
 msgstr "Le nom technique doit être unique"
 
+msgctxt "error:process.process_framework:"
+msgid "Everything is good !"
+msgstr "Tout est bon!"
+
 msgctxt "error:process.step_desc:"
 msgid "The technical name must be unique"
 msgstr "Le nom technique doit être unique"
@@ -161,6 +165,14 @@ msgstr "Entête XML"
 msgctxt "field:process.process_desc,xml_tree:"
 msgid "Tree View XML"
 msgstr "Description de la Vue Arbre"
+
+msgctxt "field:process.process_framework,current_state:"
+msgid "Current State"
+msgstr "Etat Courant"
+
+msgctxt "field:process.process_framework,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:process.process_menu_relation,create_date:"
 msgid "Create Date"
@@ -514,6 +526,10 @@ msgctxt "model:process.process_desc,name:"
 msgid "Process Descriptor"
 msgstr "Descripteur de Processus"
 
+msgctxt "model:process.process_framework,name:"
+msgid "Process Framework"
+msgstr ""
+
 msgctxt "model:process.process_menu_relation,name:"
 msgid "Process Menu Relation"
 msgstr "Relation Processus Menu"
@@ -595,7 +611,23 @@ msgid "==> Affiliations"
 msgstr ""
 
 msgctxt "view:contract.contract:"
+msgid "==> Choix des personnes couvertes"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Choix du souscripteur"
+msgstr ""
+
+msgctxt "view:contract.contract:"
 msgid "==> Commission"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Cotisations"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Document Request"
 msgstr ""
 
 msgctxt "view:contract.contract:"
@@ -604,6 +636,10 @@ msgstr ""
 
 msgctxt "view:contract.contract:"
 msgid "==> Garanties"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Options Selection"
 msgstr ""
 
 msgctxt "view:contract.contract:"
@@ -627,11 +663,23 @@ msgid "==> Tarif"
 msgstr ""
 
 msgctxt "view:contract.contract:"
+msgid "==> Taux"
+msgstr ""
+
+msgctxt "view:contract.contract:"
 msgid "==> Validation de l'avenant"
 msgstr ""
 
 msgctxt "view:contract.contract:"
+msgid "==> Validation du contract"
+msgstr ""
+
+msgctxt "view:contract.contract:"
 msgid "==> Validation du contrat"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Validation du contrat Collectif"
 msgstr ""
 
 msgctxt "view:contract.contract:"
@@ -663,6 +711,18 @@ msgid "Calculate Prices"
 msgstr "Calculer les Primes"
 
 msgctxt "view:contract.contract:"
+msgid "Calculer les Taux"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "Choix des personnes couvertes"
+msgstr "Personnes Couvertes"
+
+msgctxt "view:contract.contract:"
+msgid "Choix du souscripteur"
+msgstr "Produit"
+
+msgctxt "view:contract.contract:"
 msgid "Commission"
 msgstr "Commission"
 
@@ -675,12 +735,20 @@ msgid "Complete"
 msgstr "Terminer"
 
 msgctxt "view:contract.contract:"
+msgid "Cotisations"
+msgstr "Cotisations"
+
+msgctxt "view:contract.contract:"
 msgid "Covered Elements"
 msgstr "Eléments Couverts"
 
 msgctxt "view:contract.contract:"
 msgid "Covered Elements/Options"
 msgstr "Eléments Couverts/Garanties"
+
+msgctxt "view:contract.contract:"
+msgid "Document Request"
+msgstr "Documents"
 
 msgctxt "view:contract.contract:"
 msgid "Documents"
@@ -691,15 +759,15 @@ msgid "Garanties"
 msgstr "Garanties"
 
 msgctxt "view:contract.contract:"
-msgid "Managing Entities"
-msgstr "Délégataires"
-
-msgctxt "view:contract.contract:"
 msgid "Next"
 msgstr "Suivant"
 
 msgctxt "view:contract.contract:"
 msgid "Options"
+msgstr "Garanties"
+
+msgctxt "view:contract.contract:"
+msgid "Options Selection"
 msgstr "Garanties"
 
 msgctxt "view:contract.contract:"
@@ -739,6 +807,10 @@ msgid "Tarif"
 msgstr "Tarif"
 
 msgctxt "view:contract.contract:"
+msgid "Taux"
+msgstr "Taux"
+
+msgctxt "view:contract.contract:"
 msgid "The current record completed the current process, please go ahead"
 msgstr "Processus Terminé. Commencez une nouvelle tâche"
 
@@ -750,17 +822,31 @@ msgstr ""
 
 msgctxt "view:contract.contract:"
 msgid ""
+"The current record isin a state (Validation du contract) that you are not "
+"allowed to view."
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid ""
 "The current record isin a state (Validation du contrat) that you are not "
 "allowed to view."
 msgstr ""
 
 msgctxt "view:contract.contract:"
 msgid "Validation de l'avenant"
-msgstr ""
+msgstr "Validation de l'avenant"
+
+msgctxt "view:contract.contract:"
+msgid "Validation du contract"
+msgstr "Validation du contrat"
 
 msgctxt "view:contract.contract:"
 msgid "Validation du contrat"
 msgstr "Validation du contrat"
+
+msgctxt "view:contract.contract:"
+msgid "Validation du contrat Collectif"
+msgstr "Validation du contrat Collectif"
 
 msgctxt "view:ins_claim.claim:"
 msgid "==> Clôture"
@@ -795,7 +881,7 @@ msgid "==> Réouverture"
 msgstr ""
 
 msgctxt "view:ins_claim.claim:"
-msgid "==> Validation"
+msgid "==> Validation de l'indemnisation"
 msgstr ""
 
 msgctxt "view:ins_claim.claim:"
@@ -859,7 +945,7 @@ msgid "The current record completed the current process, please go ahead"
 msgstr "Processus Terminé. Commencez une nouvelle tâche"
 
 msgctxt "view:ins_claim.claim:"
-msgid "Validation"
+msgid "Validation de l'indemnisation"
 msgstr "Validation"
 
 msgctxt "view:process.code:"
