--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -112,15 +112,15 @@ msgstr "Etendre Arbre"
 
 msgctxt "field:table.dimension_displayer,converted_text:"
 msgid "Converted Text"
-msgstr ""
+msgstr "Texte Convertit"
 
 msgctxt "field:table.dimension_displayer,cur_dimension:"
 msgid "Current Dimension"
-msgstr ""
+msgstr "Dimension Courante"
 
 msgctxt "field:table.dimension_displayer,date_format:"
 msgid "Date Format"
-msgstr ""
+msgstr "Format Date"
 
 msgctxt "field:table.dimension_displayer,id:"
 msgid "ID"
@@ -132,7 +132,7 @@ msgstr "Mode de Saisie"
 
 msgctxt "field:table.dimension_displayer,input_text:"
 msgid "Input Text"
-msgstr ""
+msgstr "Texte à saisir"
 
 msgctxt "field:table.dimension_displayer,kind:"
 msgid "Kind"
@@ -156,7 +156,7 @@ msgstr "Table"
 
 msgctxt "field:table.dimension_displayer,values:"
 msgid "Dimension Values"
-msgstr ""
+msgstr "Valeurs"
 
 msgctxt "field:table.table_cell,create_date:"
 msgid "Create Date"
@@ -316,7 +316,7 @@ msgstr "Nom"
 
 msgctxt "field:table.table_def,number_of_digits:"
 msgid "Number of Digits"
-msgstr ""
+msgstr "Nombre de Décimales"
 
 msgctxt "field:table.table_def,rec_name:"
 msgid "Name"
@@ -412,7 +412,7 @@ msgstr "Cellules"
 
 msgctxt "model:ir.action,name:act_create_table"
 msgid "Create Table"
-msgstr ""
+msgstr "Créer Table"
 
 msgctxt "model:ir.action,name:act_manage_dimension_1"
 msgid "Manage Dimension 1"
@@ -444,7 +444,7 @@ msgstr "Tables"
 
 msgctxt "model:ir.ui.menu,name:menu_create_table"
 msgid "Create Table"
-msgstr ""
+msgstr "Créer Table"
 
 msgctxt "model:ir.ui.menu,name:menu_table_defintion_form"
 msgid "Tables"
@@ -664,7 +664,7 @@ msgstr "Dimensions"
 
 msgctxt "view:table.dimension_displayer:"
 msgid "Manage Dimensions"
-msgstr ""
+msgstr "Sélection Dimension"
 
 msgctxt "view:table.table_cell:"
 msgid "Table"
@@ -676,19 +676,19 @@ msgstr ""
 
 msgctxt "view:table.table_def:"
 msgid "Manage dimension 1"
-msgstr ""
+msgstr "Sélection Dimension 1"
 
 msgctxt "view:table.table_def:"
 msgid "Manage dimension 2"
-msgstr ""
+msgstr "Sélection Dimension 2"
 
 msgctxt "view:table.table_def:"
 msgid "Manage dimension 3"
-msgstr ""
+msgstr "Sélection Dimension 3"
 
 msgctxt "view:table.table_def:"
 msgid "Manage dimension 4"
-msgstr ""
+msgstr "Sélection Dimension 4"
 
 msgctxt "view:table.table_def:"
 msgid "Table Definition"
@@ -712,19 +712,19 @@ msgstr "Ouvert"
 
 msgctxt "wizard_button:table.create_table,new_table,edit_dim_1:"
 msgid "Edit Dimension 1"
-msgstr ""
+msgstr "Modifier Dimension1"
 
 msgctxt "wizard_button:table.create_table,new_table,end:"
 msgid "Exit"
-msgstr ""
+msgstr "Fin"
 
 msgctxt "wizard_button:table.manage_dimension_1,dimension_management,apply_:"
 msgid "Apply"
-msgstr ""
+msgstr "Appliquer"
 
 msgctxt "wizard_button:table.manage_dimension_1,dimension_management,end:"
 msgid "Exit"
-msgstr ""
+msgstr "Fin"
 
 msgctxt ""
 "wizard_button:table.manage_dimension_1,dimension_management,next_dim:"
@@ -734,15 +734,15 @@ msgstr "Dimension 2"
 msgctxt ""
 "wizard_button:table.manage_dimension_1,dimension_management,view_data:"
 msgid "View Data"
-msgstr ""
+msgstr "Visualisation des données"
 
 msgctxt "wizard_button:table.manage_dimension_2,dimension_management,apply_:"
 msgid "Apply"
-msgstr ""
+msgstr "Appliquer"
 
 msgctxt "wizard_button:table.manage_dimension_2,dimension_management,end:"
 msgid "Exit"
-msgstr ""
+msgstr "Fin"
 
 msgctxt ""
 "wizard_button:table.manage_dimension_2,dimension_management,next_dim:"
@@ -752,15 +752,15 @@ msgstr "Dimension 3"
 msgctxt ""
 "wizard_button:table.manage_dimension_2,dimension_management,view_data:"
 msgid "View Data"
-msgstr ""
+msgstr "Visualisation des données"
 
 msgctxt "wizard_button:table.manage_dimension_3,dimension_management,apply_:"
 msgid "Apply"
-msgstr ""
+msgstr "Appliquer"
 
 msgctxt "wizard_button:table.manage_dimension_3,dimension_management,end:"
 msgid "Exit"
-msgstr ""
+msgstr "Fin"
 
 msgctxt ""
 "wizard_button:table.manage_dimension_3,dimension_management,next_dim:"
@@ -770,11 +770,11 @@ msgstr "Dimension 4"
 msgctxt ""
 "wizard_button:table.manage_dimension_3,dimension_management,view_data:"
 msgid "View Data"
-msgstr ""
+msgstr "Visualisation des données"
 
 msgctxt "wizard_button:table.manage_dimension_4,dimension_management,apply_:"
 msgid "Apply"
-msgstr ""
+msgstr "Appliquer"
 
 msgctxt "wizard_button:table.manage_dimension_4,dimension_management,end:"
 msgid "Exit"
@@ -783,4 +783,4 @@ msgstr "Fin"
 msgctxt ""
 "wizard_button:table.manage_dimension_4,dimension_management,view_data:"
 msgid "View Data"
-msgstr ""
+msgstr "Visualisation des données"
